--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: danlopez <danlopez@student.42urduliz.com>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/01 21:42:01 by danlopez          #+#    #+#              #
-#    Updated: 2022/12/08 19:02:59 by danlopez         ###   ########.fr        #
+#    Updated: 2022/12/09 19:29:35 by danlopez         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,8 @@ SRC = ft_isupper.c ft_islower.c ft_isalpha.c ft_isdigit.c ft_toupper.c \
 		ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_strlcpy.c \
 		ft_strlcat.c ft_strchr.c ft_strrchr.c ft_strncmp.c ft_memchr.c \
 		ft_memcmp.c ft_strnstr.c ft_atoi.c ft_calloc.c ft_strdup.c \
-		ft_substr.c ft_strjoin.c
+		ft_substr.c ft_strjoin.c ft_maxint.c ft_minint.c ft_maxsize.c \
+		ft_minsize.c
 
 OBJ = $(SRC:.c=.o)
 
