--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,28 +6,27 @@
 #    By: danlopez <danlopez@student.42urduliz.com>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/01 21:42:01 by danlopez          #+#    #+#              #
-#    Updated: 2022/12/09 19:29:35 by danlopez         ###   ########.fr        #
+#    Updated: 2022/12/10 13:53:48 by danlopez         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CFLAGS = -Werror -Wall -Wextra
 CC = gcc
 NAME = libft.a
-SRC = ft_isupper.c ft_islower.c ft_isalpha.c ft_isdigit.c ft_toupper.c \
+SRC = ft_isalpha.c ft_isdigit.c ft_toupper.c \
 		ft_tolower.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_strlen.c \
 		ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_strlcpy.c \
 		ft_strlcat.c ft_strchr.c ft_strrchr.c ft_strncmp.c ft_memchr.c \
 		ft_memcmp.c ft_strnstr.c ft_atoi.c ft_calloc.c ft_strdup.c \
-		ft_substr.c ft_strjoin.c ft_maxint.c ft_minint.c ft_maxsize.c \
-		ft_minsize.c
+		ft_substr.c ft_strjoin.c
 
 OBJ = $(SRC:.c=.o)
 
+%.o: %.c
+	$(CC) $(CFLAGS) -c $< -o $@
+
 $(NAME): $(OBJ)
 	ar rcs $(NAME) $(OBJ)
-
-%.o: %.c
-	$(CC) -c $(CFlAGS) $^
 
 .PHONY: all, clean, fclean, re
 all: 	$(NAME)
