--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,12 +6,12 @@
 #    By: danlopez <danlopez@student.42urduliz.com>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/17 06:23:09 by danlopez          #+#    #+#              #
-#    Updated: 2023/01/30 07:17:23 by danlopez         ###   ########.fr        #
+#    Updated: 2023/01/30 20:39:23 by danlopez         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-LIBRARY = libft
-C_LIBRARY = libft/libft.a
+LIBRARY = ./libft
+C_LIBRARY = ./libft/libft.a
 FLAGS = -Werror -Wall -Wextra
 CC = gcc
 NAME = libftprintf.a
@@ -21,10 +21,13 @@ OBJ = $(SRC:.c=.o)
 
 %.o: %.c
 	cd $(LIBRARY) && $(MAKE)
-	$(CC) $(FLAGS) -c -I$(LIBRARY) $< -o $@
+	$(CC) $(FLAGS) -c $< -o $@
+#	$(CC) $(FLAGS) -I$(LIBRARY) -c $< -o $@
 
 $(NAME): $(OBJ)
+	cp $(C_LIBRARY) $(NAME)
 	ar rcs $(NAME) $(OBJ)
+#	ar rcs $(NAME) $(OBJ) $(C_LIBRARY)
 
 .PHONY: all, clean, fclean, re
 all: $(NAME)
