--- a/prueba/printf_clion/CMakeLists.txt
+++ b/prueba/printf_clion/CMakeLists.txt
@@ -3,4 +3,11 @@ project(printf_clion C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(printf_clion main.c)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Wextra -g")
+
+set(SOURCE_FILES main.c)
+
+find_library(FTPRINTF_LIBRARY ftprintf ./)
+
+add_executable(a.out ${SOURCE_FILES})
+target_link_libraries(a.out ${FTPRINTF_LIBRARY})
