--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: danlopez <danlopez@student.42urduliz.com>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/17 06:23:09 by danlopez          #+#    #+#              #
-#    Updated: 2023/01/30 20:39:23 by danlopez         ###   ########.fr        #
+#    Updated: 2023/02/05 06:20:45 by danlopez         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,11 +20,12 @@ SRC = ft_printf.c ft_printf_charutils.c ft_printf_intutils.c
 OBJ = $(SRC:.c=.o)
 
 %.o: %.c
-	cd $(LIBRARY) && $(MAKE)
+#	cd $(LIBRARY) && $(MAKE)
 	$(CC) $(FLAGS) -c $< -o $@
 #	$(CC) $(FLAGS) -I$(LIBRARY) -c $< -o $@
 
 $(NAME): $(OBJ)
+	cd $(LIBRARY) && $(MAKE)
 	cp $(C_LIBRARY) $(NAME)
 	ar rcs $(NAME) $(OBJ)
 #	ar rcs $(NAME) $(OBJ) $(C_LIBRARY)
