--- a/minitalk_no_git/Makefile
+++ b/minitalk_no_git/Makefile
@@ -6,7 +6,7 @@
 #    By: danlopez <danlopez@student.42urduliz.com>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/18 07:17:15 by danlopez          #+#    #+#              #
-#    Updated: 2023/02/18 11:18:50 by danlopez         ###   ########.fr        #
+#    Updated: 2023/02/22 06:27:36 by danlopez         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,12 +20,12 @@ SRC_SERVER = server.c
 OBJ_SERVER = $(SRC_SERVER:.c=.o)
 
 NAME_CLIENT = client
-SRC_CLIENT = 
+SRC_CLIENT = client.c 
 OBJ_CLIENT = $(SRC_CLIENT:.c=.o)
 
 %.o: %.c
 #	cd $(LIBRARY) && $(MAKE)
-	$(CC) $(FLAGS) -I$(LIBRARY) -c $< -o $@
+	$(CC) $(FLAGS) -c $< -o $@
 #	$(CC) $(FLAGS) -I$(LIBRARY) -c $< -o $@
 
 $(NAME_SERVER): $(OBJ_SERVER)
@@ -34,10 +34,10 @@ $(NAME_SERVER): $(OBJ_SERVER)
 
 $(NAME_CLIENT): $(OBJ_CLIENT)
 	cd $(LIBRARY) && $(MAKE)
-	$(CC) $(FLAGS) $(NAME_CLIENT) $(OBJ_CLIENT) $(C_LIBRARY)
+	$(CC) $(FLAGS) -o $(NAME_CLIENT) $(OBJ_CLIENT) $(C_LIBRARY)
 
 .PHONY: all, clean, fclean, re
-all: $(NAME_CLIENT) $(NAME_SERVER)
+all: $(NAME_SERVER) $(NAME_CLIENT)
 
 clean:
 	cd $(LIBRARY) && $(MAKE) clean
@@ -45,6 +45,6 @@ clean:
 
 fclean: clean
 	cd $(LIBRARY) && $(MAKE) fclean
-	rm -f $(NAME_SEVER) $(NAME_CLIENT)
+	rm -f $(NAME_SERVER) $(NAME_CLIENT)
 
 re: fclean all
