--- a/push_swap_no_git/Makefile
+++ b/push_swap_no_git/Makefile
@@ -16,7 +16,7 @@ FLAGS = -Werror -Wall -Wextra
 CC = gcc
 
 NAME = push_swap
-SRC = push_swap.c
+SRC = push_swap.c ft_sort_min.c
 OBJ = $(SRC:.c=.o)
 
 all: $(NAME) 
