--- a/prueba/push_swap_clion/CMakeLists.txt
+++ b/prueba/push_swap_clion/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_C_STANDARD 99)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Wextra -g")
 
-set(SOURCE push_swap.c ft_sort_min.c push_swap_operators.c push_swap_utils.c)
+set(SOURCE push_swap.c ft_sort_min.c push_swap_operators.c push_swap_utils.c ft_sort_mid.c)
 
 find_library(LIBFT_LIBRARY libft.a ./libft)
 
