--- a/fractol/Makefile
+++ b/fractol/Makefile
@@ -6,11 +6,19 @@
 #    By: danlopez <danlopez@student.42urduliz.com>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/03 10:30:12 by danlopez          #+#    #+#              #
-#    Updated: 2023/06/03 11:00:39 by danlopez         ###   ########.fr        #
+#    Updated: 2023/06/13 06:56:54 by danlopez         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-MINILIBX = ./include/minilibx_mms_20191025_beta
+MINILIBX_MAC = ./include/minilibx_mms_20191025_beta
+MINILIBX_LINUX = ./include/minilibx-linux
+
+OS = $(shell uname -s)
+ifeq ($(OS), Darwin)
+	MINILIBX=$(MINILIBX_MAC)
+else
+	MINILIBX=$(MINILIBX_LINUX)
+endif
 
 LIBRARY = ./include/libft
 C_LIBRARY = ./include/libft/libft.a
@@ -27,6 +35,7 @@ all: $(NAME)
 	$(CC) $(FLAGS) $(MINILIBX) -c $< -o $@
 
 $(NAME): $(OBJ)
+	cd $(MINILIBX) && $(MAKE)
 	cd $(LIBRARY) && $(MAKE)
 	$(CC) $(FLAGS) -o $(NAME) $(OBJ) $(C_LIBRARY)
 
