--- a/fractol/Makefile
+++ b/fractol/Makefile
@@ -6,46 +6,52 @@
 #    By: danlopez <danlopez@student.42urduliz.com>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/03 10:30:12 by danlopez          #+#    #+#              #
-#    Updated: 2023/06/13 06:56:54 by danlopez         ###   ########.fr        #
+#    Updated: 2023/06/14 07:10:16 by danlopez         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-MINILIBX_MAC = ./include/minilibx_mms_20191025_beta
-MINILIBX_LINUX = ./include/minilibx-linux
+MLX_MAC = ./include/minilibx_mms_20191025_beta
+C_MLX_MAC =  ./include/minilibx_mms_20191025_beta/libmlx.a
+
+MLX_LINUX = ./include/minilibx-linux
+C_MLX_LINUX = ./include/minilibx-linux/libmlx_Linux.a
+
 
 OS = $(shell uname -s)
 ifeq ($(OS), Darwin)
-	MINILIBX=$(MINILIBX_MAC)
+	MLX=$(MLX_MAC)
+	C_MLX=$(C_MLX_MAC)
 else
-	MINILIBX=$(MINILIBX_LINUX)
+	MLX=$(MLX_LINUX)
+	C_MLX=$(C_MLX_LINUX)
 endif
 
-LIBRARY = ./include/libft
-C_LIBRARY = ./include/libft/libft.a
+LIBFT = ./include/libft
+C_LIBFT = ./include/libft/libft.a
 FLAGS = -Werror -Wall -Wextra
 CC = gcc
 
 NAME = fractol
-SRC = fractol.c
+SRC = main.c
 OBJ = $(SRC:.c=.o)
 
 all: $(NAME) 
 
 %.o: %.c
-	$(CC) $(FLAGS) $(MINILIBX) -c $< -o $@
+	$(CC) $(FLAGS) -c $< -o $@
 
 $(NAME): $(OBJ)
-	cd $(MINILIBX) && $(MAKE)
-	cd $(LIBRARY) && $(MAKE)
-	$(CC) $(FLAGS) -o $(NAME) $(OBJ) $(C_LIBRARY)
+	cd $(MLX) && $(MAKE)
+	cd $(LIBFT) && $(MAKE)
+	$(CC) $(FLAGS) -o $(NAME) $(OBJ) $(C_LIBFT) $(C_MLX)
 
 .PHONY: all, clean, fclean, re
 clean:
-	cd $(LIBRARY) && $(MAKE) clean
+	cd $(LIBFT) && $(MAKE) clean
 	rm -f $(OBJ)
 
 fclean: clean
-	cd $(LIBRARY) && $(MAKE) fclean
+	cd $(LIBFT) && $(MAKE) fclean
 	rm -f $(NAME)
 
 re: fclean all
